# StoneDraw

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  LICENSE  README.md  components.json  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
scripts/: check-architecture.ts
scripts/architecture/: collect.ts  config.ts  report.ts
src/: App.tsx  feature-architecture-migration.md  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_document_index.sql  0003_document_foundation.sql  0004_version_metadata.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/application/: documents.rs  mod.rs
src-tauri/src/commands/: database.rs  documents.rs  files.rs  logs.rs  mod.rs  settings.rs  system.rs
src-tauri/src/storage/: database.rs  directories.rs  documents.rs  logs.rs  mod.rs
src-tauri/src/storage/documents/: meta.rs  repository.rs  scene.rs  versions.rs
src-tauri/tests/: document_storage_roundtrip.rs
src/adapters/: index.ts
src/app/: App.test.tsx  App.tsx  AppRouter.test.tsx  AppRouter.tsx  index.ts
src/constants/: app.ts  commands.ts  index.ts  routes.ts
src/editor/: index.ts
src/features/: index.ts
src/incubating/: README.md
src/modules/: index.ts
src/overlay/: CommandPalette.tsx  ExportDialog.tsx  NewDocumentDialog.tsx  index.ts
src/pages/: index.ts
src/platform/: index.ts
src/repositories/: index.ts
src/services/: database.service.ts  index.ts  (+9 more)
(+368 files in other folders)
